Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

0.1.1   2005-06-02 The mantra of bugfixes.

* New improved and full-featured application icon, thanks 
  to Christian Schoenebeck design.
  
* Fixed refresh cycle of channel strips that are found
  in an error state, which wwas preventing correct channel
  info updates.

* Device configuration now accessible on toolbar.

* Minor configure fix, a debian specialty.


0.1.0   2005-05-23  Device configuration breakthrough.

* Device configuration is now complete (EXPERIMENTAL).

* [bug #9] Fixed for a LSCP command syntax convention
  consistency, regarding the enumeration of available 
  sampler engines, Audio and MIDI drivers.

* [bug #13] Update instrument names list when a new 
  instrument file is select on the channel setup dialog. 

* Show appropriate message in channel strip while loading 
  an instrument. 

* Show libgig version in About box (in case libgig is used). 


0.0.5   2005-03-04  Fifth alpha-release.

* Fixed device driver type channel information gathering,
  which was severely flawed, dropping all channel session
  configurations to the default audio driver type (which
  is ALSA) unexpectedly.

* Channels are now properly renumbered when saving to a
  session LSCP script, assuming that it should be always
  loaded from scratch (i.e. zero channels).

* Disabled MIDI port setting on channel dialog, and on
  session file save, as its use is still troublesome.

* Added new menu and toolbar option: Reset All Channels.

* Channel setup changes are now properly filtered, as for
  only those settings that are actually changed gets applied;
  change information are now also posted to messages window.

* Drag-and-drop of either session files (LSCP scripts) or
  instrument files (GIG) are now supported. Multiple files
  drop is allowed, but it only makes sense for instrument
  files, each one prompting to create a new sampler channel.
